# investor-fee-distributor

./: Anchor.toml  Cargo.toml  README.md  package-lock.json
programs/investor-fee-distributor/: Cargo.toml
programs/investor-fee-distributor/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/investor-fee-distributor/src/instructions/: distribute.rs  initialize.rs
scripts/: example-distribution.ts
tests/: investor-fee-distributor.ts
