[package]
name = "investor-fee-distributor"
version = "0.1.0"
description = "DAMM v2 honorary position with 24h fee distribution crank"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "investor_fee_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
